--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-    "devDependencies": {
-        "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
-        "core-js": "^3.0.0",
-        "regenerator-runtime": "^0.13.2",
-        "sass": "^1.42.1",
-        "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "mdb-ui-kit": "^3.9.0",
-        "sass-loader": "^12.1.0"
-    }
+  "devDependencies": {
+    "@symfony/stimulus-bridge": "^2.0.0",
+    "@symfony/webpack-encore": "^1.0.0",
+    "core-js": "^3.0.0",
+    "regenerator-runtime": "^0.13.2",
+    "sass": "^1.42.1",
+    "stimulus": "^2.0.0",
+    "webpack-notifier": "^1.6.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  },
+  "dependencies": {
+    "mdb-ui-kit": "^3.9.0",
+    "sass-loader": "^12.1.0"
+  },
+  "name": "bootcamp-businesscase",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GrandvauxClement/Bootcamp-BusinessCase.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/GrandvauxClement/Bootcamp-BusinessCase/issues"
+  },
+  "homepage": "https://github.com/GrandvauxClement/Bootcamp-BusinessCase#readme",
+  "description": ""
 }
