--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
+/public/images/restaurants/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
