--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ APP_SECRET=c4487eea640d954ca35364a76413b664
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
+MAILER_DSN=mailjet+api://c33baf8ecaf846fb97e4ea6a75aeb845:ecb6b60c30c6af58bc3f28eb8041ede0@api.mailjet.com
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
@@ -27,6 +28,11 @@ APP_SECRET=c4487eea640d954ca35364a76413b664
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:root@127.0.0.1:3306/businesscase?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/businesscase?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailjet-mailer ###
+# MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
+# #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
